K8S/task3/vpro-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  selector:
    app: vproapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
