K8S/task3/vpro-mc-svc.yml
apiVersion: v1 
kind: Service
metadata:
  name: vprocache01 # this is name service it from -> /src/main/resources/application.properties
spec:
  selector:
    app: vpromc
  ports:
  - protocol: TCP
    port: 11211
    targetPort: 11211
