K8S/task3/vpro-rmq-scv.yml
apiVersion: v1 
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vpromq01
  ports:
  - protocol: TCP
    port: 5672
    targetPort: 5672
