K8S/task3/vprodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  clusterIP: None
  selector:
    app: vprodb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
